<resources>
    <string name="app_name">Tenner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_exception">Exception</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="prompt_login_success">Welcome</string>

    <string name="error_invalid_email">email is empty</string>
    <string name="error_invalid_password">password is empty</string>
    <!--<string name="error_invalid_name">email is empty</string>-->
    <!--<string name="error_invalid_email">email is empty</string>-->
    <!--<string name="error_invalid_email">email is empty</string>-->

    <!-- Strings related to Home -->
    <string name="home_greeting">Welcome, </string>

    <!-- Strings related to Sign Up -->
    <string name="sign_up_prompt_title">Create New Account</string>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_sign_up">Sign Up</string>

    <!-- Strings related to Bottom Nav Bar -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_tasks">Tasks</string>
    <string name="bottom_nav_post">Post</string>
    <string name="bottom_nav_bids">Bids</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="nav_icon_size">30dp</string>

    <!-- Strings related to Post -->
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="post_location">Location (Optional)</string>
    <string name="post_address">Address</string>
    <string name="post_Image">Image (Optional)</string>
    <string name="post_save">Save</string>

    <!-- Strings related to Toolbar -->
    <string name="tasks_tab_requested">Requested</string>
    <string name="tasks_tab_providing">Providing</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>


    <!-- Strings related to Select Photo -->
    <string name="select_photo_camera">Take a Photo</string>
    <string name="select_photo_gallery">Select from Gallery</string>



</resources>
